--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 						<td>
 							<font face="Comic sans MS" size="6">
-								<b>GeeksForGeeks</b>
+								<b>Demo</b>
 							</font>
 						</td>
 
@@ -35,7 +35,7 @@
 						<td>
 							<a href="#home" style="text-decoration:none">
 								<font face="Verdana" size="5" color=black>
-									Home
+									Home01
 								</font>
 							</a>
 						</td>
